# wenxihuang-com

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  MULTIPLAYER_CHATGPT_PLAN.md  README.md  docker-compose.yml  fly.toml  package.json  pnpm-lock.yaml
backend/: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  fly.toml  start.sh
backend/.sqlx/: query-042fa4bf99e442c5d1c505156ac691b27d2b78f0e35de2fa5fb75b1f130c5f19.json  query-2a4d3116287381e589fa80371dce7571f67c7d86ddb185fcbc465f84fd3fd571.json  query-437a8373f5132bb1972e324a652982674c7a17b01a4f179234cb84be493ca5e7.json  query-438515a2ceebbd3075afbf8296df6855a2dbc20b293f361e3673682d814bc64d.json  query-4e9ad9a589dcc146ad6e7059196ebd1b201f6e1078ac56b4e38927e7564ff9ca.json  query-50c1a28bd0d17e69c2fae4fbe552b9ff40a5e91e55171f216109d539ff359dbd.json  query-5e8ab77478016ad6b12226a76481e34d26934f586a4f1e55e7654c80bd222f95.json  query-65192c05de2635a8ddd21fac2c522261fc9fb88c363a41ed230e6f498213b53a.json  query-6c043d122395b3cc9709c968390fe05274d772f37ab7b0fff9472fb7cd1231a8.json  query-9c4fea298be36035afeb2ab6bc08502245eca1f696ef8be021ccccbdec6c2b16.json  query-a5c996ccc00cfc8f52287726afe95dc92466c033309f25e2748336b296c7c8e7.json  query-acc99dc65f98ef5669a8a70e955c4f8f4c2a8645025ef55062d9988041ced51c.json  query-b6083da97398f91ef84124d65a2d2aa80163d86b71c92e87e8505dc6d78e06f0.json  query-c786bb112d2d89283174b52b5345d5140105e91c6cc08426c2cb919379dfe8e4.json  query-c865686232a7142af29e6400662037cc508b7e929674a6413dd4d43bf7e52b27.json  query-df3f423a982fc5e61aa649b822a2eb32321ff3180633aa7d86d69278a446215a.json  query-e602700e32ec7a81dcfb27b7fcb6eb762f62d8b23e324368d04c09587414d389.json  query-f4bef74c545e7fa0e06c7bf04ef7a338401b9ce0fa866d56ed546318d12b74cd.json
backend/backend/: query-01b89bc1a4109488f62038d808f52b66f8794838b8e8114cdbeac6cf3af223af.json  query-03261d77d70fa59eb2bd0bb0761811b62808fb4360d114a3f38ff4af6514485a.json  query-10be75c823c64a1fd06c1d68d923fda67e94b25c84f99fdfc9bbbb7545ad861d.json  query-3eb62ae73a16868f94429988859548cb9147dd548820d0d55098521a786f8125.json  (+5 more)
(+157 files in other folders)
