[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "create_admin"
path = "src/bin/create_admin.rs"

[[bin]]
name = "initialize"
path = "src/bin/initialize.rs"

[[bin]]
name = "recalculate_elo"
path = "src/bin/recalculate_elo.rs"

[[bin]]
name = "create_season"
path = "src/bin/create_season.rs"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = "0.8.6"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
csv = "1.3"
dotenvy = "0.15.7"
notify = { version = "8.2.0", features = ["serde"] }
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["json"] }
rpassword = "7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
time = "0.3.44"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-cookies = "0.11.0"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
